--- a/SPA2023/Frontend/truwebque/src/app/auth/register/register.component.css
+++ b/SPA2023/Frontend/truwebque/src/app/auth/register/register.component.css
@@ -1,5 +1,32 @@
 /* @import '~bootstrap/dist/css/bootstrap.css'; */
 
+input:focus {
+    outline: unset;
+  }
+  /* agregar borde rojo a los input que estén en estado inválido */
+  .ng-invalid {
+    border: 2px solid rgb(250, 183, 0);
+  }
+  .ng-valid{
+    border:  3px solid rgba(2, 198, 2, 0.864);
+  }
+
+
+input + label {
+    display: none;
+  }
+  
+input:invalid + label {
+    display: inline-block;
+    border-radius: 5px;
+    border-top-left-radius: 0;
+    padding-left: 5px;
+    padding-right: 5px;
+    background-color: rgb(255, 0, 0);
+    font-size: smaller;
+  }
+
+
 
 #form-registro{
     width: fit-content;
@@ -18,8 +45,15 @@
 }
 
 #form-btn{
+    margin-top: 6px;
     background-color: rgb(226, 141, 43);
-    border-radius: 5px;
+    border-radius: 3px;
+}
+button:hover{
+  transform: scale(1.1);
+  transition: s;
+  text-decoration: underline;
+
 }
 
 #fecha{
