--- a/SPA2023/Frontend/truwebque/src/app/shop/component/product-form/product-form.component.html
+++ b/SPA2023/Frontend/truwebque/src/app/shop/component/product-form/product-form.component.html
@@ -2,6 +2,18 @@
   <h1 class="text-center">Carga de producto y/o servicio</h1>
   <div class="container px-3 py-2 bordes">
     <form [formGroup]="form" >
+
+      <div class="form-check mt-3">
+        <input
+          class="form-check-input"
+          type="checkbox"
+          value=""
+          id="IsNewCheck"
+          formControlName="IsNewCheck"
+        />
+        <label class="form-check-label" for="IsNewCheck">Es nuevo?</label>
+      </div>
+
       <div class="form-group">
         <label for="title">titulo</label>
         <input type="text" class="form-control"
@@ -44,6 +56,9 @@
         <label for="preferencias">preferencias</label>
         <input type="text" class="form-control" formControlName="preferences"/>
       </div>
+      <div class="row" *ngIf="preferencesControl.invalid && (preferencesControl.dirty || preferencesControl.touched)">
+        <p class="col error" *ngIf="preferencesControl.errors?.['required']">Campo requerido</p>
+      </div>
 
       <div class="form-group">
         <label for="category">categoria</label>
@@ -59,13 +74,25 @@
           formControlName="readCheck"
         />
         <label class="form-check-label" for="readCheck">
-          Leí y estoy de acuerdo con las condiciones de uso de la plataforma.
+          Leí y estoy de acuerdo con las <a class="link-primary" [routerLink]="['/shop/publishTerms']"> condiciones de uso </a> de la plataforma.
         </label>
       </div>
       <button [disabled]="form.invalid || form.pending" type="submit"
        (click)="addProduct()" class="mt-3 btn btn-primary">Agregar</button>
     </form>
   </div>
+</div>
+
+<!-- Delete alert-->
+<div *ngIf="added"
+    class="fixed-bottom alert alert-success dismiss"
+     role="alert">
+  La publicacion fue agregada.
+</div>
+<div *ngIf="deleted"
+    class="fixed-bottom alert alert-danger dismiss"
+     role="alert">
+  Ocurrio un error.
 </div>
 
 <pre> {{form.value | json}}</pre>
