--- a/SPA2023/Frontend/truwebque/src/app/shop/component/all-products/all-products.component.html
+++ b/SPA2023/Frontend/truwebque/src/app/shop/component/all-products/all-products.component.html
@@ -1,5 +1,5 @@
-  <div class="container text-center">
-    todos productos
+<div class="container text-center">
+  todos productos
 
   <!-- carousel init
   <div class="container" style=" height: 20rem">
@@ -71,30 +71,34 @@
   carousel end -->
 
   <div class="row row-cols-5 align-items-start">
+    <div
+      *ngFor="let product of products"
+      class="card p-3 m-3 text-truncate"
+      style="width: 10rem"
+    >
+      <img
+        src="https://th.bing.com/th/id/R.dc5e5867cabdb00c44433dac2c87c736?rik=0RpcniOFTFBBcw&riu=http%3a%2f%2fwww.pepsico.cl%2fimages%2flibrariesprovider40%2fdefault-album%2fvb3_montaje-productos-pepsico2e33c3aeef576d378be6ff5000e253d8.jpg%3fsfvrsn%3d1&ehk=DWzgEvkO%2fu8RcjcZYgkjXFxQRKrjMqoYosTD6FAvypE%3d&risl=&pid=ImgRaw&r=0"
+        class="card-img-top"
+        alt="imagen"
+      />
+      <div class="card-body">
+        <p class="card-text cut">{{ product.titulo }}</p>
+        <hr />
 
-        <div *ngFor="let product of products"
-              class="card p-3 m-3 text-truncate"
-              style="width: 10rem;" >
-          <img src="https://th.bing.com/th/id/R.dc5e5867cabdb00c44433dac2c87c736?rik=0RpcniOFTFBBcw&riu=http%3a%2f%2fwww.pepsico.cl%2fimages%2flibrariesprovider40%2fdefault-album%2fvb3_montaje-productos-pepsico2e33c3aeef576d378be6ff5000e253d8.jpg%3fsfvrsn%3d1&ehk=DWzgEvkO%2fu8RcjcZYgkjXFxQRKrjMqoYosTD6FAvypE%3d&risl=&pid=ImgRaw&r=0"
-          class="card-img-top" alt="imagen">
-          <div class="card-body">
-            <p class="card-text cut">{{product.title}}</p>
-            <hr>
-
-            <div class="row justify-content-center align-items-end">
-              <div class="col">
-                ${{product.price}}
-              </div>
-              <div class="col">
-                <button class="btn btn-primary fs-6 text-nowrap"
-                  [routerLink]="['/shop/product']">Ver mas</button>
-              </div>
-            </div>
+        <div class="row justify-content-center align-items-end">
+          <div class="col" *ngIf="product.estado; then thenBlock; else elseBlock"></div>
+          <ng-template #thenBlock>Condicion "Nuevo"</ng-template>
+          <ng-template #elseBlock>Condicion "Usado"</ng-template>
+          <div class="col">
+            <button
+              class="btn btn-primary fs-6 text-nowrap"
+              (click)="publishById(product.id_publicacion)"
+              >
+              Ver mas
+            </button>
           </div>
         </div>
-
-
+      </div>
     </div>
-
-
   </div>
+</div>
