terminando edit form

--- a/SPA2023/Frontend/truwebque/src/app/shop/component/edit-product/edit-product.component.html
+++ b/SPA2023/Frontend/truwebque/src/app/shop/component/edit-product/edit-product.component.html
@@ -1,3 +1,3 @@
-<h1>Editar Publicacion</h1>
+<h1 class="text-center">Editar Publicacion</h1>
 
-<app-product-form></app-product-form>
+<app-product-form [itemId]="currentItem"></app-product-form>
