--- a/SPA2023/Frontend/truwebque/src/app/shop/component/product-form/product-form.component.html
+++ b/SPA2023/Frontend/truwebque/src/app/shop/component/product-form/product-form.component.html
@@ -1,4 +1,4 @@
-<div class="container pr-5">
+<div class="container pr-5 size">
   <div class="container px-3 py-2 bordes">
     <form [formGroup]="form" >
 
