--- a/SPA2023/Frontend/truwebque/src/app/shop/component/my-products/my-products.component.html
+++ b/SPA2023/Frontend/truwebque/src/app/shop/component/my-products/my-products.component.html
@@ -1,4 +1,10 @@
-<h1>Mis publicaciones</h1>
+<div class="row">
+  <div class="col-sm-8 col-xs-12 justify-content-xs-center"><h1>Mis publicaciones</h1></div>
+  <div class="col-sm-4 col-xs-12 d-flex justify-content-sm-end justify-content-xs-center">
+    <button class="btn btn-primary btn-1" [routerLink]="['/shop/newProduct']">Agregar publicacion
+    </button></div>
+</div>
+
 
 <table class="table table-hover">
   <thead>
@@ -10,32 +16,18 @@
     </tr>
   </thead>
   <tbody>
-    <tr>
-      <th scope="row">1</th>
-      <td>{{articulo}}</td>
-      <td>{{cantidad}}</td>
+    <tr *ngFor="let product of products">
+      <th>{{product.id_publicacion}}</th>
+      <td>{{product.titulo}}</td>
+      <td>{{product.cantidad}}</td>
+      <td>{{product.preferencias_de_trueque}}</td>
       <td>
-        <button class="btn btn-warning">
-          <i
-            [ngClass]="{
-              'bi bi-pencil': !pencilFill,
-              ' bi bi-pencil-fill': pencilFill
-            }"
-            (mouseover)="fillPencil()"
-            (mouseleave)="fillPencil()"
-            [routerLink]="['/shop/newProduct']"
-          ></i>
+        <button class="btn btn-warning btn-1">
+          <i class="bi bi-pencil" [routerLink]="['/shop/editProduct/',product.id_publicacion]">
+          </i>
         </button>
-        <button class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteModal">
-          <i style="color:black"
-            [ngClass]="{
-              'bi bi-trash': !trashFill,
-              ' bi bi-trash-fill': trashFill
-            }"
-            (mouseover)="fillTrash()"
-            (mouseleave)="fillTrash()"
-
-          ></i>
+        <button class="btn btn-danger btn-1" data-bs-toggle="modal" data-bs-target="#deleteModal">
+          <i style="color:black" class="bi-trash-fill" (click)="setId(product.id_publicacion)"></i>
         </button>
 
       </td>
