image change, addpublish observable

--- a/SPA2023/Frontend/truwebque/src/app/shop/component/product/product.component.html
+++ b/SPA2023/Frontend/truwebque/src/app/shop/component/product/product.component.html
@@ -18,7 +18,7 @@
     <div class="row text-center align-items-center">
         <div class="col-md-4 col-sm-12 p-4">{{productDescription}}</div>
         <div class="col-md-8 col-sm-12">
-          <img src="{{productImage}}" class="img" alt="Imagen de publicacion">
+          <img src="https://th.bing.com/th/id/R.dc5e5867cabdb00c44433dac2c87c736?rik=0RpcniOFTFBBcw&riu=http%3a%2f%2fwww.pepsico.cl%2fimages%2flibrariesprovider40%2fdefault-album%2fvb3_montaje-productos-pepsico2e33c3aeef576d378be6ff5000e253d8.jpg%3fsfvrsn%3d1&ehk=DWzgEvkO%2fu8RcjcZYgkjXFxQRKrjMqoYosTD6FAvypE%3d&risl=&pid=ImgRaw&r=0" class="img" alt="Imagen de publicacion">
         </div>
     </div>
 
