--- a/SPA2023/Frontend/truwebque/src/app/shop/component/product/product.component.html
+++ b/SPA2023/Frontend/truwebque/src/app/shop/component/product/product.component.html
@@ -1,25 +1,44 @@
-<div class="container">
+<div *ngIf="isLoading" class="d-flex justify-content-center align-items-center ">
+  <div class="spinner-border" role="status">
+    <span class="visually-hidden">Loading...</span>
+  </div>
+</div>
+<div *ngIf="!isLoading">
+  <div *ngIf="!exist" ><h1 class="text-center">No existe publicacion.</h1></div>
+  <div *ngIf="exist" class="container">
     <div class="row">
-        <div class="col-md-9 col-sm-12 text-center">
-            <h2>{{productTitle}}</h2>
+      <div class="col-md-9 col-sm-12 text-center">
+        <h2>{{ productTitle }}</h2>
+      </div>
+      <div class="col-md-3 col-sm-12">
+        <div class="row">
+          <div class="vstack gap-1 align-items-center">
+            <div
+              class="p-2"
+              *ngIf="productState; then thenBlock; else elseBlock"
+            ></div>
+            <ng-template #thenBlock>Condicion "Nuevo"</ng-template>
+            <ng-template #elseBlock>Condicion "Usado"</ng-template>
+          </div>
         </div>
-        <div class="col-md-3 col-sm-12">
-            <div class="row">
-                <div class="vstack gap-1 align-items-center">
-                    <div class="p-2" *ngIf="productState; then thenBlock; else elseBlock"></div>
-          <ng-template #thenBlock>Condicion "Nuevo"</ng-template>
-          <ng-template #elseBlock>Condicion "Usado"</ng-template>
-
-                </div>
-            </div>
-        </div>
+      </div>
     </div>
-    <hr>
+    <hr />
     <div class="row text-center align-items-center">
-        <div class="col-md-4 col-sm-12 p-4">{{productDescription}}</div>
-        <div class="col-md-8 col-sm-12">
-          <img src="https://th.bing.com/th/id/R.dc5e5867cabdb00c44433dac2c87c736?rik=0RpcniOFTFBBcw&riu=http%3a%2f%2fwww.pepsico.cl%2fimages%2flibrariesprovider40%2fdefault-album%2fvb3_montaje-productos-pepsico2e33c3aeef576d378be6ff5000e253d8.jpg%3fsfvrsn%3d1&ehk=DWzgEvkO%2fu8RcjcZYgkjXFxQRKrjMqoYosTD6FAvypE%3d&risl=&pid=ImgRaw&r=0" class="img" alt="Imagen de publicacion">
-        </div>
+      <div class="col-md-4 col-sm-12 p-4">
+        Descripcion: <br />
+        {{ productDescription }}
+      </div>
+      <div class="col-md-8 col-sm-12">
+        <img
+          src="https://th.bing.com/th/id/R.dc5e5867cabdb00c44433dac2c87c736?rik=0RpcniOFTFBBcw&riu=http%3a%2f%2fwww.pepsico.cl%2fimages%2flibrariesprovider40%2fdefault-album%2fvb3_montaje-productos-pepsico2e33c3aeef576d378be6ff5000e253d8.jpg%3fsfvrsn%3d1&ehk=DWzgEvkO%2fu8RcjcZYgkjXFxQRKrjMqoYosTD6FAvypE%3d&risl=&pid=ImgRaw&r=0"
+          class="img"
+          alt="Imagen de publicacion"
+        />
+      </div>
+      <div class="col-md-4 col-sm-12 p-4">
+        Fecha de publicacion : {{ productDate }}
+      </div>
     </div>
-
+  </div>
 </div>
