edit and post registro

--- a/SPA2023/Frontend/truwebque/src/app/auth/login/login.component.html
+++ b/SPA2023/Frontend/truwebque/src/app/auth/login/login.component.html
@@ -29,7 +29,7 @@
 
         
         <div class="button-form">         
-          <!-- <button type="submit" id="submit" (click)="getUser()">Ingresar</button> -->
+        <!-- <button type="submit" id="submit" (click)="getUser()">Ingresar</button> -->
         <button type="submit" id="submit">Ingresar</button>
             <div id="register">
                 ¿No tienes una cuenta aún? 
@@ -44,14 +44,16 @@
 <br>
 <br>
 <hr>
-<section id="test">
+
+
+<!-- <section id="test">
 
 <h4>API Rest de Prueba - Traer Usuarios</h4>
 <br>
-<button type="submit" id="submit" (click)="show =!show">Lista Usuarios</button>
+<button type="submit" id="submit" (click)="show =!show">Lista Usuarios</button> -->
 
 <!-- Tabla que Muestra los datos traidos -->
-  <table class="table table-responsive table-hover">
+  <!-- <table class="table table-responsive table-hover">
 
     <tbody id="tabla" *ngIf="!show">
 
@@ -72,26 +74,4 @@
 
   </table>
 
-</section>
-
-
-
-
-
-
-
-
-<br>
-<br>
-<br>
-
-<!-- <script type="text/javascript">
-  function myFun() {
-
-    document.getElementById("login-box").style.display = "none";
-    document.getElementById("tabla-usuarios").style.display = "contents";
-    }
-
-</script> -->
-
- 
+</section> -->
