--- a/SPA2023/Frontend/truwebque/src/app/auth/login/login.component.css
+++ b/SPA2023/Frontend/truwebque/src/app/auth/login/login.component.css
@@ -1,4 +1,12 @@
 
+
+.login{
+  margin-top: 100px;
+  margin-bottom: 100px;
+
+}
+
+
 .bd-placeholder-img {
     font-size: 1.125rem;
     text-anchor: middle;
