se agrego vista del registro

--- a/SPA2023/Frontend/truwebque/src/app/auth/register/register.component.html
+++ b/SPA2023/Frontend/truwebque/src/app/auth/register/register.component.html
@@ -22,10 +22,10 @@
       <label for="defaultRegisterFormEmail">Ingrese Mail correctamente</label>
     </div>
     <!--  boton Registro -->
-    <button type="submit" name="submit" class="btn btn-secondary btn-sm" block="true" id="form-btn" [disabled]="!registerForm.valid">Registrate</button>
+    <button type="submit" name="submit" class="btn btn-secondary btn-sm" block="true" id="form-btn" [disabled]="!registerForm.valid">Registrate <i class="bi bi-person-fill-add"></i></button>
     <hr>
     <!-- Terminos y servicios -->
-    <p>Al <em>Registrarte</em> estas aceptando nuestros
+    <p>Al <em >Registrarte</em> estas aceptando nuestros
     <a [routerLink]="['/tyc']">terminos y condiciones</a>
 
 </form>
