--- a/SPA2023/Frontend/truwebque/src/app/pages/contacto-component/contacto-component.component.html
+++ b/SPA2023/Frontend/truwebque/src/app/pages/contacto-component/contacto-component.component.html
@@ -1,1 +1,20 @@
-<p>contacto-component works!</p>
+
+
+<div id="tarjeta">
+
+    <div class="card" style="width: 18rem;">
+        <img class="card-img-top" src="\assets\user.png" alt="Card image cap" >
+        <div class="card-body">
+          <p class="card-text">
+            Registro Realizado con exito 
+            Bienvenido!
+          </p>
+        </div>
+        <button [routerLink]="['/']">ir a Inicio <i class="bi bi-box-arrow-right"></i></button>
+    </div>
+
+</div>
+ 
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&family=Varela+Round&display=swap" rel="stylesheet">
