--- a/SPA2023/Frontend/truwebque/src/app/pages/header-component/header-component.component.html
+++ b/SPA2023/Frontend/truwebque/src/app/pages/header-component/header-component.component.html
@@ -45,6 +45,14 @@
             <li class="nav-item">
               <a class="nav-link" [routerLink]="['/shop']"> Productos</a>
             </li>
+
+            <li class="nav-item">
+              <a class="nav-link" [routerLink]="['/shop/myProducts']">
+                <i class="fa-light fa-user"></i>
+                Productos</a>
+
+            </li>
+
             <li class="nav-item">
               <a class="nav-link" [routerLink]="['/']" (click)="LogOut()"
                 >LogOut
